# Simplify

./: .env.template  .gitignore  Dockerfile  Dockerfile.test  README.md  cleanup.sh  cloudbuild.yaml  deployment.yaml  docker-compose.test.yml  docker-compose.yml  evaluation.ipynb  finetune_embedding_model.ipynb  pyproject.toml  pytest.ini  run_local.sh  service.yaml  start.sh  stop_local.sh  test_agent_system_OLD.ipynb  test_local.sh  test_problem_gen_rag.ipynb  test_problem_grader_rag.ipynb  test_vectorstore_code.ipynb
backend/app/: __init__.py  crawler.py  main.py  problem_generator.py  problem_grader.py  vectorstore.py  vectorstore_helpers.py
backend/tests/: test_api.py  test_crawler.py  test_quiz.py  test_vectorstore.py
frontend/: nginx.conf  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.js
frontend/src/components/: DocumentInput.tsx  Header.tsx  ProblemAnswer.tsx  ProblemList.tsx  QuizGenerator.tsx  Topics.tsx
frontend/src/styles/: global.css
frontend/src/tests/: App.test.tsx
frontend/src/tests/components/: DocumentInput.test.tsx  QuizGenerator.test.tsx  Topics.test.tsx
frontend/src/types/: Problem.ts
k8s/: deployment.yaml  service.yaml  simplifi-app-secrets.yaml
static/data/: langchain_rag_tutorial.html
