[project]
name = "backend"
version = "0.1.0"
description = "Backend for the application"
requires-python = "==3.12"
dependencies = [
    "chainlit>=2.0.4",
    "numpy>=2.2.2",
    "openai>=1.59.9",
    "pydantic==2.10.1",
    "pypdf2>=3.0.1",
    "websockets>=14.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.34.0",
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "langchain-openai>=0.3.2",
    "langchain-huggingface>=0.1.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0", 
    "openai>=1.12.0",
    "pytest-dotenv>=0.5.2",
    "unstructured",
    "haystack-ai==2.0.1",
    "qdrant-client==1.13.3",
    "qdrant-haystack==3.3.1",
    "ipykernel",
    "sentence-transformers>=3.4.1",
    "transformers[torch]>=4.48.3",
    "wandb>=0.19.6",
    "datasets>=3.2.0",
    "ragas==0.2.10",
    "black>=25.1.0",
    "scrapy==2.12.0",
    "fastembed==0.6.0",
    "langchain-qdrant==0.2.0",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
